tests/neg/i11487.scala
import language.future
import scala._  // error

object Test